# clipboard

./: Cargo.toml  clipboard.conf
src/: main.rs
